# Flight-Navigation-System

./: .gitignore  CMakeLists.txt  README.md
cmake/: LoadEnv.cmake
cmake/Modules/: FindSFML.cmake
src/: main.cpp
src/controllers/: flight_controller.cpp  flight_controller.h
src/gui/: mainwindow.cpp  mainwindow.h
src/models/: mustang_p.cpp  mustang_p.h
src/utils/: api_handler.cpp  api_handler.h  engine_data.cpp  engine_data.h  flight_data.cpp  flight_data.h  map_drawer.cpp  map_drawer.h
